# advent-of-code

./: .gitignore
2022/python/1/: puzzle.py
2022/python/10/: puzzle.py
2022/python/11/: puzzle.py
2022/python/12/: puzzle.py
2022/python/13/: puzzle.py
2022/python/14/: puzzle.py
2022/python/15/: puzzle.py  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
2022/python/18/: puzzle.py
2022/python/19/: example.txt  puzzle.py
2022/python/2/: graph.py  optimise.py  puzzle.py  test.txt
2022/python/3/: puzzle.py
2022/python/4/: puzzle.py
2022/python/5/: puzzle.py
2022/python/6/: puzzle.py
2022/python/7/: puzzle.py
2022/python/8/: puzzle.py
2022/python/9/: puzzle.py
2022/python/common/: __init__.py  grid.py
2023/dart/: day1.dart  day2.dart
2023/python/: day1.ipynb  day2.ipynb  day3.ipynb
2023/python/common/: __init__.py  get_file_path.py  iterate_input_lines.py
2024/: README.md  pyproject.toml  utils.py
2024/day01/: solution.py
2024/day02/: solution.py  test.txt
2024/day03/: solution.py
2024/day04/: solution.py
2024/day05/: solution.py
2024/day06/: solution.py
2024/day07/: solution.py
2024/day08/: solution.py
2024/day11/: solution.py
