[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = "Advent of Code 2024"
authors = ["Jeroen Oldenburger <jeroen@socradev.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
polars = "^1.16.0"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py313']